--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.1.10",
     "@toast-ui/react-calendar": "^1.0.5",
     "axios": "^0.21.1",
+    "config": "^3.3.6",
     "react": "^17.0.2",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -37,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy":"http://localhost:8080"
 }
